Added example for Main Menu to use resources for Title & for Start Game

--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -17,6 +17,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Update="Localization\MainMenuLocale.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>MainMenuLocale.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +32,10 @@
     <EmbeddedResource Update="Localization\CharacterSheetLocale.resx">
       <LastGenOutput>CharacterSheetLocale.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\MainMenuLocale.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>MainMenuLocale.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
